# MineMc

./: .gitignore  README.md  TODO.md  gradle.properties  gradlew  gradlew.bat  local.properties.template  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ryzix/minemc/: GameActivity.kt  GameOverlayView.kt  GameSurfaceView.kt  MainActivity.kt  NativeBridge.kt  Settings.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_game.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
assets/shaders/: voxel.frag  voxel.vert
gradle/: libs.versions.toml
native/: CMakeLists.txt
native/core/: GameEngine.cpp  GameEngine.h  GameLoop.cpp  GameLoop.h
native/input/: InputHandler.cpp  InputHandler.h
native/platform/: AndroidBridge.cpp  AndroidBridge.h
native/render/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.h
native/world/: Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h  WorldGen.cpp  WorldGen.h  WorldSerializer.cpp  WorldSerializer.h
